--- a/FriendStagram/Main.storyboard
+++ b/FriendStagram/Main.storyboard
@@ -158,7 +158,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h6Z-Vf-Ldi">
-                                <frame key="frameInset" height="44"/>
+                                <frame key="frameInset" minX="0.33333333333333331" height="44" maxX="-0.99999999999994316"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Photo" id="ayN-ag-Cga"/>
@@ -323,7 +323,7 @@
                                         <rect key="frame" x="0.0" y="28" width="414" height="429"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e2M-cu-N3W" id="iRC-5N-w8d">
-                                            <frame key="frameInset" width="414" height="428.5"/>
+                                            <frame key="frameInset" width="414" height="428.66666666666669"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pD0-wV-fAf">
@@ -356,7 +356,7 @@
                                 </prototypes>
                             </tableView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kjO-R8-J0f">
-                                <frame key="frameInset" minX="-0.5" height="44"/>
+                                <frame key="frameInset" minX="-1" height="44" maxX="0.5"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="FriendStagram" id="P2h-AN-flg"/>
@@ -376,6 +376,7 @@
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-1"/>
                     </tabBarItem>
                     <connections>
+                        <outlet property="navigationBar" destination="kjO-R8-J0f" id="zAj-mL-xn1"/>
                         <outlet property="postListView" destination="zCB-l1-urn" id="UBN-2d-sxV"/>
                         <outlet property="titleLabel" destination="YEb-MZ-5xG" id="3LH-le-ri4"/>
                     </connections>
